--- a/HTML5.html
+++ b/HTML5.html
@@ -6,6 +6,11 @@
 !Etiquetas semánticas
 !etc.
 
+<!-- HTML = estructura + contenido
+HTML + DISEÑO = CSS3
+CSS = HOJAS DE ESTILO EN CASCADA
+  = MAQUETADO = MAQUETACION -->
+
 
 <!DOCTYPE html>
 <html lang="es">
