--- a/HTML5conHeader.html
+++ b/HTML5conHeader.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Titulo de la pagina</title>
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
+
   <body>
     <header>
       <h1>Titulo de la aplicación</h1>
