--- a/HTML5conHeader.html
+++ b/HTML5conHeader.html
@@ -10,10 +10,17 @@
     <header>
       <h1>Titulo de la aplicación</h1>
         logo de la empresa
-        <img src="" alt="">
-        Menú de navegación <br>
+        <br>
+        <img src="2.png" alt="Logo de la empresa">
         <nav>
-          Etiquetas para navegar entre las opciones de la página.
+          <ul>
+            <li>Inicio</li>
+            <li>Altas</li>
+            <li>Bajas</li>
+            <li>Cambios</li>
+            <li>Consultas</li>
+            <li>Salir</li>
+          </ul>
         </nav>
     </header>
     <br>
