Mejoras del diseño Pagina CSS3

--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -18,22 +18,22 @@
 			<li>Seccion</li>
 			<li>Seccion</li>
 		</ul>
-		<form>
+		<form action="">
 			<input type="search" placeholder="Buscar aqui...">
 			<input type="button" value="buscar">
 		</form>	
 	</nav>
 </header>
-<section>
+<section id="seccion01">
 	<article>
 		<img src="img/slide2.jpg">
 	</article>
 </section>
-<section>
+<section id="seccion02">
 	<article>
 		<img src="img/separador.jpg">
 		<br>
-		Una sección
+		<span class="unaSeccion">Una sección</span>
 		<br>
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -41,13 +41,15 @@
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		<p></p>
-		<input type="submit" value="Ver mas">
+		<p>
+			<input type="submit" value="Ver mas">
+		</p>
+		
 	</article>
 	<article>
 		<img src="img/separador.jpg">
 		<br>
-		Otra sección
+		<span class="otraSeccion">Otra sección</span>
 		<br>
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -55,13 +57,15 @@
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		<p></p>
-		<input type="submit" value="Ver mas">
+		<p>
+			<input type="submit" value="Ver mas">
+		</p>
+		
 	</article>
 	<article>
 		<img src="img/separador.jpg">
 		<br>
-		Un vídeo
+		<span class="unVideo">Un Vídeo</span>
 		<br>
 		<img src="img/video.jpg">
 	</article>
