--- a/practica02/index.html
+++ b/practica02/index.html
@@ -8,8 +8,8 @@
 <body>
 <header>
 	<img src="img/banner.png">
-	<img src="img/granthams.png">
-	<img src="img/paint.png">
+	<img src="img/granthams.png" id="granthams">
+	<img src="img/paint.png" id="paint">
 	<input type="search" placeholder="Search">
 	<nav>
 		<ul>
@@ -21,11 +21,11 @@
 		</ul>
 	</nav>
 </header>
-<section>
-	<article>
+<section id="primerSeccion">
+	<article id="seccion01Article01">
 		<img src="img/slide.jpg">
 	</article>
-	<article>
+	<article id="seccion01Article02">
 		We can offer...
 		<ul>
 			<li>Highly Competitive Prices</li>
@@ -40,32 +40,32 @@
 	</article>
 	<img src="img/bg_offer.png">
 </section>
-<section>
+<section id="segundaSeccion">
 	<article>
-		01772 250207
+		<span class="colorRosa">01772 250207</span>
 	</article>
 </section>
-<section>
+<section id="tercerSeccion">
 	<article>
-		<img src="img/cerdito.png">Save this Spring
+		<img src="img/cerdito.png"><span class="colorRosa">Save this Spring</span>
 		<br>
 		Fabulous discounts on canvas's and roll up's as well as many other offers. <p>
-		Find out more...
+		<span class="colorRosa">Find out more...</span>
 	</article>
 	<article>
-		<img src="img/hoja.png">ECO Friendly
+		<img src="img/hoja.png"><span class="colorVerde">ECO Friendly</span>
 		<br>
 		ECO Friendly Materials used in our production process.
 		Recycled papers and paper from Sustainable Forest(including FSC papers) are available across our range of Printing Services.
 	</article>
 	<article>
-		<img src="img/new.png">Upload your file
+		<img src="img/new.png"><span class="colorAzul">Upload your file</span>
 		<br>
 		Making it easy to order your printing today. Our upload facility enables you to send your files directly to us. Use the notes section to inform us of your order, then sit back and wait for a member of your team to contact you. </p>
-		Upload Your File Now...
+		<span class="colorAzul">Upload Your File Now...</span>
 	</article>
 	<article>
-		Stay in touch <br>
+		<span class="colorRosa">Stay in touch</span> <br>
 		Join our mmailing list today
 		<br>
 		<input type="Email" placeholder="Email goes here">
