--- a/practica03css/index.html
+++ b/practica03css/index.html
@@ -44,23 +44,29 @@
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	<input type="submit" value="Ver mas">
+	<br>
+	<input type="submit" value="Leer mas...">
 	</article>
 </section>
 <section id="section2">
 	<article id="article3">
 		<span class="Publicidad">Publicidad</span>
 		<br>
+		<form>
 		<img src="img/publicidad.jpg">
 		<img src="img/publicidad.jpg">
 		<br>
 		<img src="img/publicidad.jpg">
 		<img src="img/publicidad.jpg">
+		</form>
 	</article>
 	<article id="article4">
 		<span class="Buscador">Buscador</span>
+		<br>
+		<form>
 		<input type="search" placeholder="Search...">
 		<input type="button" value="Go">
+		</form>
 	</article>
 	<article id="article5">
 		<span class="Categorias">Categorias</span>
