--- a/practicacss04/index.html
+++ b/practicacss04/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Practica 4</title>
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 <header>
 	<img src="img/logo.png">
-</header>
 <nav>
 	<ul>
 		<li><img src="img/mensajes.png"></li>
@@ -15,9 +15,10 @@
 		<li><img src="img/ajustes.png"></li>
 	</ul>
 </nav>
-<section>
+</header>
+<section id="section1">
 	<article>
-		<img src="img/panel.png">
+		<img src="img/panel.png" id="panel">
 		<br>
 		<ul>
 			<li>Example</li>
@@ -38,7 +39,104 @@
 		<br>
 		Progress Bar
 		<br>
+		<img src="img/barra01.png">
+		<br>
+		Progress Bar
+		<br>
+		<img src="img/barra02.png">
+		<br>
+		Progress Bar
+		<br>
+		<img src="img/barra03.png">
+		<br>
+		Progress Bar
+		<br>
+		<img src="img/barra04.png">
+		<br>
 
+	</article>
+</section>
+<section id="section2">
+	Simple Cubes
+	<br>
+	<article>
+		<img src="img/cubo1.png">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua.
+	</article>
+	<article>
+		<img src="img/cubo02.png">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua.
+	</article>
+	<article>
+		<img src="img/cubo03.png">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua.
+	</article>
+	<article>
+		<img src="img/cubo04.png">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua.
+	</article>
+	<br>
+	Panels
+	<br>
+	<article>
+		<!-- <span class="span1">84%</span>
+		<br>
+		<img src="img/grafico.png">
+		<br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua.
+	</article>
+	<article>
+		<span class="span2">36%</span>
+		<br>
+		<img src="img/grafico.png">
+		<br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua.
+	</article>
+	<article>
+		<span class="span3">32%</span>
+		<br>
+		<img src="img/grafico.png">
+		<br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. -->
+		<img src="img/panels.png">
+	</article>
+	<br>
+	Usuarios
+	<br>
+	<article>
+		<img src="img/usuario01.png">
+		<br>
+		User Example
+		<br>
+		<input type="button" value="Send Message">
+	</article>
+	<article>
+		<img src="img/usuario02.png">
+		<br>
+		User Example
+		<br>
+		<input type="button" value="Send Message">
+	</article>
+	<article>
+		<img src="img/usuario03.png">
+		<br>
+		User Example
+		<br>
+		<input type="button" value="Send Message">
+	</article>
+	<article>
+		<img src="img/usuario04.png">
+		<br>
+		User Example
+		<br>
+		<input type="button" value="Send Message">
 	</article>
 </section>
 </body>
