--- a/practicacss04/index.html
+++ b/practicacss04/index.html
@@ -33,25 +33,25 @@
 			<li>Example</li>
 		</ul>
 	</article>
-	<article>
-		<img src="img/logoprogress.png">
-		Panel with Progress
+	<article id="s1a2">
+		<img src="img/logoprogress.png" id="progress">
+		<span class="panel">Panel with Progress</span>
 		<br>
 		Progress Bar
 		<br>
-		<img src="img/barra01.png">
+		<img src="img/barra01.png" id="barras">
 		<br>
 		Progress Bar
 		<br>
-		<img src="img/barra02.png">
+		<img src="img/barra02.png" id="barras">
 		<br>
 		Progress Bar
 		<br>
-		<img src="img/barra03.png">
+		<img src="img/barra03.png" id="barras">
 		<br>
 		Progress Bar
 		<br>
-		<img src="img/barra04.png">
+		<img src="img/barra04.png" id="barras">
 		<br>
 
 	</article>
@@ -59,26 +59,27 @@
 <section id="section2">
 	Simple Cubes
 	<br>
-	<article>
-		<img src="img/cubo1.png">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua.
+	<section id="s2-1">
+		<article id="cubo1">
+		<img src="img/cubo1.png" id="cubo1">
+		<br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 	</article>
-	<article>
+	<article id="cubo2">
 		<img src="img/cubo02.png">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua.
+		<br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 	</article>
-	<article>
+	<article id="cubo3">
 		<img src="img/cubo03.png">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua.
-	</article>
-	<article>
+		<br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+	<article id="cubo4">
 		<img src="img/cubo04.png">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua.
+		<br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 	</article>
+	</section>
 	<br>
 	Panels
 	<br>
@@ -105,10 +106,11 @@
 		<br>
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. -->
-		<img src="img/panels.png">
+		<img src="img/panels.png" id="s2panels">
 	</article>
 	<br>
-	Usuarios
+	<section id="s2-2">
+		Usuarios
 	<br>
 	<article>
 		<img src="img/usuario01.png">
@@ -138,6 +140,7 @@
 		<br>
 		<input type="button" value="Send Message">
 	</article>
+	</section>
 </section>
 </body>
 </html>
