--- a/practicacss04/index.html
+++ b/practicacss04/index.html
@@ -10,14 +10,14 @@
 	<img src="img/logo.png">
 <nav>
 	<ul>
-		<li><img src="img/mensajes.png"></li>
-		<li><img src="img/notificaciones.png"></li>
-		<li><img src="img/ajustes.png"></li>
+		<li><img src="img/mensajes.png" id="mensajes"></li>
+		<li><img src="img/notificaciones.png" id="notificaciones"></li>
+		<li><img src="img/ajustes.png" id="ajustes"></li>
 	</ul>
 </nav>
 </header>
 <section id="section1">
-	<article>
+	<article id="s1a1">
 		<img src="img/panel.png" id="panel">
 		<br>
 		<ul>
@@ -74,12 +74,14 @@
 		<img src="img/cubo03.png">
 		<br>
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+		</article>
 	<article id="cubo4">
 		<img src="img/cubo04.png">
 		<br>
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 	</article>
 	</section>
+	<br>
 	<br>
 	Panels
 	<br>
