mejoras y detalles practica 4

--- a/practicacss04/index.html
+++ b/practicacss04/index.html
@@ -34,8 +34,10 @@
 		</ul>
 	</article>
 	<article id="s1a2">
+	<form>
 		<img src="img/logoprogress.png" id="progress">
 		<span class="panel">Panel with Progress</span>
+	</form>
 		<br>
 		Progress Bar
 		<br>
