--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -12,43 +12,46 @@
 	<table>
 		<tr>
 			<td colspan=4></td>
-			<input type="text" size=20 value=0 name="operando1">
+			<input type="text" size=20 value=0 id="operando1">
 		</tr>
 		<br>
 		<tr>
 			<td colspan=4></td>
-			<input type="text" size=20 value=0 name="operando2">
+			<input type="text" size=20 value=0 id="operando2">
 		</tr>
 		<br>
 		<tr>
 			<td colspan=4></td>
-			<input type="text" size=20 value=0 name="Resultado">
+			<input type="text" size=20 value=0 id="Resultado">
 		</tr>
 		<tr>
-			<td><input type="button" value="7" onclick="numeros(this.value)"></td>
-			<td><input type="button" value="8" onclick="numeros(this.value)"></td>
-			<td><input type="button" value="9" onclick="numeros(this.value)"></td>
-			<td><input type="button" value="+" onclick="operadores(this.value)"></td>
+			<td><input type="button" value="7" id="btn07"></td>
+			<td><input type="button" value="8" id="btn08"></td>
+			<td><input type="button" value="9" id="btn09"></td>
+			<td><input type="button" value="+" id="btnsumar"></td>
 		</tr>
 		<tr>
-			<td><input type="button" value="4" onclick="numeros(this.value)"></td>
-			<td><input type="button" value="5" onclick="numeros(this.value)"></td>
-			<td><input type="button" value="6" onclick="numeros(this.value)"></td>
-			<td><input type="button" value="-" onclick="operadores(this.value)"></td>
+			<td><input type="button" value="4" id="btn04"></td>
+			<td><input type="button" value="5" id="btn05"></td>
+			<td><input type="button" value="6" id="btn06"></td>
+			<td><input type="button" value="-" id="btnRestar"></td>
 		</tr>
 		<tr>
-			<td><input type="button" value="1" onclick="numeros(this.value)"></td>
-			<td><input type="button" value="2" onclick="numeros(this.value)"></td>
-			<td><input type="button" value="3" onclick="numeros(this.value)"></td>
-			<td><input type="button" value="*" onclick="operadores(this.value)"></td>
+			<td><input type="button" value="1" id="btn01"></td>
+			<td><input type="button" value="2" id="btn02"</td>
+			<td><input type="button" value="3" id="btn03"></td>
+			<td><input type="button" value="*" id="btnMultiplicar"></td>
 		</tr>
 		<tr>
-			<td><input type="button" value="C" onclick="borrar()"></td>
-			<td><input type="button" value="0" onclick="numeros(this.value)"></td>
-			<td><input type="button" value="=" onclick="igual()"></td>
-			<td><input type="button" value="/" onclick="operadores(this.value)"></td>
+			<td><input type="button" value="C" id="btnCe"></td>
+			<td><input type="button" value="0" id="btn00"></td>
+			<td><input type="button" value="=" id="btnIgual"></td>
+			<td><input type="button" value="/" id="btnDividir"></td>
 		</tr>
 	</table>
 </form>
+<script>
+	require('./index.js');
+</script>
 </body>
 </html>
