Json randomUser ajax

--- a/randomuser/index.html
+++ b/randomuser/index.html
@@ -2,9 +2,15 @@
 <html>
 <head>
 	<title>Usuarios aleatorios</title>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
+<button id="btnInfo">Informacion</button>
 <img src="" id="imgFoto"> <br>
 <div id="txtNombre"></div>
+
+<script>
+	require('./index.js');
+</script>
 </body>
 </html>
