--- a/randomuser/index.html
+++ b/randomuser/index.html
@@ -1,16 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+	<meta charset="UTF-8">
 	<title>Usuarios aleatorios</title>
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
-<button id="btnInfo">Informacion</button>
-<img src="" id="imgFoto"> <br>
-<div id="txtNombre"></div>
-
-<script>
-	require('./index.js');
-</script>
+	<section id="sectionButton">
+		<article>
+			<button id="btnInfo">Información</button>
+		</article>
+	</section>
+	<p><p>
+	<section id="sectionDatos">
+		<article>
+			<img src="" id="imgFoto"> <br>
+	<section>
+		<article>
+			<div id="txtNombre"></div>
+			<br>
+			<div id="txtGender"></div>
+			<br>
+		</article>
+		<article>
+			<div id="txtLocation"> Datos de localización</div>
+			<div id="txtStreet"></div>
+			<div id="txtCity"></div>
+			<div id="txtState"></div>
+			<div id="txtPostcode"></div>
+			<br>
+		</article>
+		<article>
+			<div id="txtEmail"></div>
+			<div id="txtLogin"></div>
+			<div id="txtUsername"></div>
+			<div id="txtPassword"></div>
+			<div id="txtSalt"></div>
+			<div id="txtMd5"></div>
+			<div id="txtShal"></div>
+			<div id="txtSha256"></div>
+			<br>
+		</article>
+		<article>
+			<div id="txtDob"></div>
+			<div id="txtRegistered"></div>
+			<div id="txtPhone"></div>
+			<div id="txtCell"></div>
+			<div id="txtId"> Datos ID</div>
+			<div id="txtNameId"></div>
+			<div id="txtValue"></div>
+			<br>
+		</article>
+		<div id="txtNad"></div>
+		<br>
+		<article>
+			<div id="txtInfo">Inforamción</div>
+			<div id="txtSeed"></div>
+			<div id="txtResults"></div>
+			<div id="txtPage"></div>
+			<div id="txtVersion"></div>
+		</article>
+	</section>
+		</article>
+	</section>
+	<script>
+		require('./index.js');
+	</script>
 </body>
 </html>
